a2/stage/tests/accept/nested_if.ul
void main() {
  int test;
  if (3 < 2) {

    if (2 < 3) {
      test = 123;
    }

  }

  else {

  }
}
