a2/stage/tests/reject/3.1.1_invalid.ul
void main() {
    int n;
    if (n) {
        n++;
    }
}
